--- a/src/modules/styles/index.css
+++ b/src/modules/styles/index.css
@@ -7,3 +7,12 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+@media all and (min-width: 480px) {
+  .form-fields {
+    padding: 60px 0;
+  }
+  .form-fields form {
+    margin: 0 auto;
+    max-width: 320px;
+  }
+}
