--- a/src/modules/styles/index.less
+++ b/src/modules/styles/index.less
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+@media all and (min-width: 480px) {
+  .form-fields {
+    padding: 60px 0;
+  }
+
+  .form-fields form {
+    margin: 0 auto;
+    max-width: 320px;
+  }
+}
